# zeta2_edu_devel

./: LICENSE  README.md
ldlidar-ros2/: 99-ldlidar.rules  CMakeLists.txt  ldlidar copy.rules  package.xml  readme.md
ldlidar-ros2/include/: lipkg.h
ldlidar-ros2/launch/: ldlidar.launch.py
ldlidar-ros2/src/: ldlidar_node.cpp  lipkg.cpp
zeta2_bringup/: CMakeLists.txt  package.xml
zeta2_bringup/config/: xbox.config.yaml  zeta_efk.yaml
zeta2_bringup/launch/: control.launch  control.launch.py  localization.launch.py  odometry.launch  odometry.launch.py  zeta2_bringup.launch.py  zeta2_state_publisher.launch.py  zeta_if.launch  zeta_if.launch.py  zeta_joy.launch.py  zeta_mc.launch  zeta_mc.launch.py
zeta2_bringup/scripts/: control.py  odom_mornitor.py  odometry.py
zeta2_bringup/serial/: CMakeLists.txt  package.xml
zeta2_bringup/zeta_if/include/: zeta_if.hpp
zeta2_bringup/zeta_if/src/: zeta_if.cpp  zeta_if_node.cpp
zeta2_bringup/zeta_mc/include/: zeta_mc.hpp
zeta2_bringup/zeta_mc/src/: zeta_mc.cpp  zeta_mc_node.cpp
zeta2_description/: CMakeLists.txt  package.xml
zeta2_description/launch/: display.launch.py
zeta2_description/meshes/zeta/: caster_wheel_mid.stl  caster_wheel_tire.stl  caster_wheel_top.stl  dofbot_plate.stl  ld06.stl  zeta_right_wheel.stl
zeta2_description/rviz/: zeta_model.rviz
zeta2_description/urdf/: common_properties.xacro  zeta2.urdf.xacro
